# Nutty-Music

./: .gitignore  CMakeLists.txt  LICENSE.txt  Nutty Music.sln  Nutty Music.vcxproj  README.md
Headers/: DataProcessing.hpp  MusicController.hpp  YtdlpCalls.hpp  mainapp.hpp  mainwindow.hpp
Python Libs/charset_normalizer-3.3.2.dist-info/: RECORD
Python Libs/ytmusicapi-1.3.2.dist-info/: RECORD
dll/: desktop.ini
include/custom/: myVector.hpp
lib/vc_x64_dll/: desktop.ini  wxbase32u.lib  wxbase32u_net.lib  wxbase32u_xml.lib  wxbase32ud.lib  wxbase32ud_net.lib  wxbase32ud_xml.lib  wxexpat.lib  wxexpatd.lib  wxjpeg.lib  wxjpegd.lib  wxmsw32u_adv.lib  wxmsw32u_aui.lib  wxmsw32u_gl.lib  wxmsw32u_html.lib  wxmsw32u_media.lib  wxmsw32u_propgrid.lib  wxmsw32u_qa.lib  wxmsw32u_ribbon.lib  wxmsw32u_richtext.lib  wxmsw32u_stc.lib  wxmsw32u_webview.lib  wxmsw32u_xrc.lib  wxmsw32ud_adv.lib  wxmsw32ud_aui.lib  wxmsw32ud_gl.lib  wxmsw32ud_html.lib  wxmsw32ud_media.lib  wxmsw32ud_propgrid.lib  wxmsw32ud_qa.lib  wxmsw32ud_ribbon.lib  wxmsw32ud_richtext.lib  wxmsw32ud_stc.lib  wxmsw32ud_webview.lib  wxmsw32ud_xrc.lib  wxpng.lib  wxpngd.lib  wxregexu.lib  wxregexud.lib  wxtiff.lib  (+3 more)
lib/vc_x64_dll/mswu/: build.cfg
lib/vc_x64_dll/mswud/: build.cfg
src/: DataProcessing.cpp  MusicController.cpp  YtdlpCalls.cpp  mainapp.cpp  mainwindow.cpp
ytdlp/: ytsearch.py
